# wtm

./: .eslintrc.json  .gitignore  .oxlintrc.json  CLAUDE.md  PUBLISHING.md  README.md  package.json  pnpm-lock.yaml  renovate.json5  tsconfig.json  vitest.config.js  wt.sh
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml  workflow-lint.yml
preview/: Cargo.toml  README.md  wt.sh
preview/wtm-select/src/: main.rs
src/: index.ts
src/commands/: add.ts  add.tsx  init.ts  interactive.ts  list.ts  remove.ts  root.ts
src/components/: InteractiveBranchSelector.tsx  InteractiveWorktreeSelector.tsx  WorktreeSelector.tsx
src/types/: index.ts
src/utils/: git.ts  hook.ts
test/: tsconfig.json
test/commands/: add.test.ts  interactive.test.ts  list.test.ts  remove.test.ts  root-warning.test.ts  root.test.ts
test/components/: InteractiveWorktreeSelector.test.tsx  WorktreeSelector.test.tsx
test/utils/: git.test.ts  hook.test.ts
wtm-select/: Cargo.toml
wtm-select/src/: main.rs
