[package]
name = "wtm-select"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.42"
clap = { version = "4.5.53", features = ["derive"] }
git2 = "0.20.2"
rayon = "1.11.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
skim = { version = "1.6.0", default-features = false }
ratatui = { version = "0.30.0", default-features = false, features = ["crossterm_0_29"] }
